--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -59,7 +59,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\Division.cs" />
+    <Compile Include="Models\Multiplication.cs" />
+    <Compile Include="Models\Addition.cs" />
     <Compile Include="Models\BinaryOperation.cs" />
+    <Compile Include="Models\Subtraction.cs" />
     <Compile Include="Models\UnaryOperation.cs" />
     <Compile Include="Models\UniversalOperation.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
