Changed the layout of the application
Added a new UserControl to display the "Standard calculator" interface

--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Models\ArithmeticOperations\Subtraction.cs" />
     <Compile Include="Models\Base\UnaryOperation.cs" />
     <Compile Include="Models\Base\UniversalOperation.cs" />
+    <Compile Include="ViewModels\Base\BaseViewModel.cs" />
+    <Compile Include="ViewModels\Base\RelayCommand.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
@@ -73,11 +75,18 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Views\StandartCalculatorControl.xaml.cs">
+      <DependentUpon>StandartCalculatorControl.xaml</DependentUpon>
+    </Compile>
     <Page Include="Styles\Buttons.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\MainWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\StandartCalculatorControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -110,7 +119,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Images\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
