--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -78,6 +78,10 @@
     <Compile Include="Views\StandartCalculatorControl.xaml.cs">
       <DependentUpon>StandartCalculatorControl.xaml</DependentUpon>
     </Compile>
+    <Page Include="Styles\Brushes.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\Buttons.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
