--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Views\StandartCalculatorControl.xaml.cs">
       <DependentUpon>StandartCalculatorControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WindowHelper\WindowResizer.cs" />
     <Page Include="Styles\Colors.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -93,10 +94,6 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Styles\Fonts.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Styles\Windows.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
