--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Models\Base\UnaryOperation.cs" />
     <Compile Include="Models\Base\UniversalOperation.cs" />
     <Compile Include="ViewModels\Base\BaseViewModel.cs" />
+    <Compile Include="ViewModels\Base\RelayParameterizedCommand.cs" />
     <Compile Include="ViewModels\Base\RelayCommand.cs" />
     <Compile Include="ViewModels\WindowViewModel.cs" />
     <Compile Include="ViewModels\StandartCalculatorViewModel.cs" />
