--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -78,6 +78,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Views\MainWindowContentControl.xaml.cs">
+      <DependentUpon>MainWindowContentControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\StandartCalculatorControl.xaml.cs">
       <DependentUpon>StandartCalculatorControl.xaml</DependentUpon>
     </Compile>
@@ -90,15 +93,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Styles\Texts.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="Styles\Fonts.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\MainWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\MainWindowContentControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
