--- a/src/Calculator/Calculator.csproj
+++ b/src/Calculator/Calculator.csproj
@@ -60,6 +60,7 @@
     </ApplicationDefinition>
     <Compile Include="Models\Calculation\Operations\ArithmeticOperations\Negation.cs" />
     <Compile Include="Models\Calculation\Operations\Base\BinaryOperation.cs" />
+    <Compile Include="Models\Calculation\Operations\Base\Number.cs" />
     <Compile Include="Models\Calculation\Operations\Base\UnaryOperation.cs" />
     <Compile Include="Models\Calculation\Operations\Base\UniversalOperation.cs" />
     <Compile Include="Models\Calculation\Calculate.cs" />
