--- a/src/Calculator/Calculator.csproj
+++ b/src/Calculator/Calculator.csproj
@@ -58,6 +58,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Common\Numerals.cs" />
+    <Compile Include="Common\Operations.cs" />
     <Compile Include="Models\Calculation\Operations\ArithmeticOperations\Negation.cs" />
     <Compile Include="Models\Calculation\Operations\Base\BinaryOperation.cs" />
     <Compile Include="Models\Calculation\Operations\Base\Number.cs" />
