--- a/src/Calculator/Calculator.csproj
+++ b/src/Calculator/Calculator.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Models\Calculation\Operations\ArithmeticOperations\Subtraction.cs" />
     <Compile Include="Models\Calculation\Operations\ArithmeticOperations\Division.cs" />
     <Compile Include="Models\Calculation\Operations\ArithmeticOperations\Addition.cs" />
+    <Compile Include="Models\CalculatorLogic.cs" />
     <Compile Include="Models\MakeAnExpression\ClearData.cs" />
     <Compile Include="Models\MakeAnExpression\NumberStandardization.cs" />
     <Compile Include="Models\MakeAnExpression\CurrentExpressionFormation.cs" />
