--- a/src/Calculator/Calculator.csproj
+++ b/src/Calculator/Calculator.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Models\MakeAnExpression\Common.cs" />
     <Compile Include="Models\MakeAnExpression\ClearData.cs" />
     <Compile Include="Models\MakeAnExpression\CurrentData.cs" />
+    <Compile Include="Models\MakeAnExpression\Memory.cs" />
     <Compile Include="Models\MakeAnExpression\NumberStandardization.cs" />
     <Compile Include="Models\MakeAnExpression\ExpressionFormation.cs" />
     <Compile Include="Models\MakeAnExpression\NumberFormation.cs" />
